--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     .image{
       
       height: 600px;
-      background-image: url("../assets/images/image-web-3-mobile.jpg");
+      background-image: url("./assets/images/image-web-3-mobile.jpg");
       background-size: cover;
     }
    
@@ -273,7 +273,7 @@
 
   .image{
       height: 388px;
-      background-image: url("../assets/images/image-web-3-desktop.jpg");
+      background-image: url("./assets/images/image-web-3-desktop.jpg");
       
     }
     .feature2{
